--- a/pom.xml
+++ b/pom.xml
@@ -19,5 +19,21 @@
       <artifactId>mockito-core</artifactId>
       <version>1.9.5</version>
     </dependency>
+    <dependency>
+	  <groupId>org.codehaus.mojo</groupId>
+	  <artifactId>cobertura-maven-plugin</artifactId>
+	  <version>2.7</version>
+	  <type>maven-plugin</type>
+	</dependency>
   </dependencies>
+  
+  <reporting>
+    <plugins>
+      <plugin>
+        <groupId>org.codehaus.mojo</groupId>
+        <artifactId>cobertura-maven-plugin</artifactId>
+        <version>2.7</version>
+      </plugin>
+    </plugins>
+  </reporting>
 </project>
